--- a/appspec.yml
+++ b/appspec.yml
@@ -31,4 +31,9 @@ hooks:
             timeout: 300
             runas: ubuntu
             
+    ApplicationStart:
+         - location: scripts/start_server
+            timeout: 300
+            runas: root
+            
    
