--- a/appspec.yml
+++ b/appspec.yml
@@ -8,38 +8,38 @@ hooks:
     ApplicationStop:
          - location: scripts/stop_application.sh
             timeout: 300
-            runas: root
+            runas: ubuntu
             
     BeforeInstall:
         - location: beforeinstall.sh
             timeout: 300
-            runas: root
+            runas: ubuntu
 
     AfterInstall:
          - location: afterinstall.sh
             timeout: 300
-            runas: root
+            runas: ubuntu
          
          - location:  /etc/systemd/system/gunicorn.socket
             timeout: 300
-            runas: root
+            runas: ubuntu
             
          - location: /etc/systemd/system/gunicorn.socket
             timeout: 300
-            runas: root
+            runas: ubuntu
             
          - location: /scripts/command
             timeout: 300
-            runas: root
+            runas: ubuntu
             
          - location: /etc/nginx/sites-available/myproject
             timeout: 300
-            runas: root
+            runas: ubuntu
             
     ApplicationStart:
          - location: scripts/start_server
             timeout: 300
-            runas: root
+            runas: ubuntu
             
     
             
