--- a/appspec.yml
+++ b/appspec.yml
@@ -28,7 +28,7 @@ hooks:
             timeout: 300
             runas: ubuntu
             
-         - location: /scripts/command
+         - location: /scripts/command.sh
             timeout: 300
             runas: ubuntu
             
@@ -37,7 +37,7 @@ hooks:
             runas: ubuntu
             
     ApplicationStart:
-         - location: scripts/start_server
+         - location: scripts/start_server.sh
             timeout: 300
             runas: ubuntu
             
