--- a/appspec.yml
+++ b/appspec.yml
@@ -14,6 +14,6 @@ files:
 #     runas: ubuntu
 hooks:
   BeforeInstall:
-      - location: /opt/codedeploy-agent/deployment-root/7a99d5e3-5b94-4a82-81dc-95e570fb937d/d-709YAG9M8/deployment-archive/before_install.sh
+      - location: before_install.sh
   AfterInstall:
-      - location: /opt/codedeploy-agent/deployment-root/7a99d5e3-5b94-4a82-81dc-95e570fb937d/d-709YAG9M8/deployment-archive/after_install.sh
+      - location: after_install.sh
