--- a/k8s/deploy.yml
+++ b/k8s/deploy.yml
@@ -12,10 +12,11 @@ spec:
   template:
     metadata:
       labels:
-        app: nginx
+        app: auth
     spec:
       containers:
       - name: authentication-project
-        image: auth-image:latest
+        image: gopalgtm001/auth-app:latest
+
         ports:
         - containerPort: 8000
