--- a/k8s/service.yml
+++ b/k8s/service.yml
@@ -1,13 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: auth-service
+  name: my-service
 spec:
-  type: NodePort
   selector:
-    app: auth
+    app: simple-1
   ports:
     - protocol: TCP
       port: 8000
       targetPort: 8000
-      nodePort: 31000
